# setup-environment-AugustoCabrera

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  FirstProjectInCMake  build.ninja  cmake_install.cmake  runLab.sh
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt  test_FirstProjectInCMake
tests/Testing/Temporary/: CTestCostData.txt
tests/unit/: test_unit_program.c
